--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_analysis.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_analysis.xml
@@ -7,7 +7,7 @@
     android:layout_marginBottom="10dp"
     android:animateLayoutChanges="true"
 
-    android:gravity="center"
+    android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical">
 
     <ScrollView
@@ -19,6 +19,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal"
+            android:animateLayoutChanges="true"
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
@@ -50,9 +52,9 @@
                         android:text="[KEY]"
                         android:textAlignment="center" />
 
-                    <LinearLayout
+                    <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="65dp"
                         android:layout_weight="1"
                         android:orientation="horizontal">
 
@@ -61,17 +63,36 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginEnd="66dp"
+                            android:layout_marginStart="56dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="1"
-                            android:text="Shift Left" />
+                            android:text="Shift Left"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/button_analysis_shift_right"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.0" />
 
                         <Button
                             android:id="@+id/button_analysis_shift_right"
                             style="@style/Widget.AppCompat.Button.Borderless.Colored"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginEnd="56dp"
+                            android:layout_marginStart="66dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="1"
-                            android:text="Shift right" />
-                    </LinearLayout>
+                            android:text="Shift right"
+                            android:textSize="14sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/button_analysis_shift_left"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.0" />
+                    </android.support.constraint.ConstraintLayout>
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -88,78 +109,52 @@
                 android:id="@+id/analysis_period_card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                app:cardUseCompatPadding="true">
 
-                <FrameLayout
-                    android:id="@+id/layout_period"
+                <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_weight="1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:layout_editor_absoluteY="175dp">
+                    android:layout_height="wrap_content">
 
-                    <LinearLayout
-                        android:layout_width="368dp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        tools:layout_editor_absoluteX="8dp"
-                        tools:layout_editor_absoluteY="8dp">
+                    <SeekBar
+                        android:id="@+id/seekBar_period"
+                        style="@style/Widget.AppCompat.SeekBar.Discrete"
+                        android:layout_width="281dp"
+                        android:layout_height="63dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginEnd="26dp"
+                        android:layout_marginStart="26dp"
+                        android:layout_marginTop="9dp"
+                        android:max="10"
+                        android:padding="20dp"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp"
+                        android:progress="3"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/period_indicator" />
 
-                        <android.support.constraint.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/period_indicator"
+                        android:layout_width="261dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginEnd="36dp"
+                        android:layout_marginStart="36dp"
+                        android:layout_marginTop="8dp"
+                        android:padding="20dp"
+                        android:text="INDICATOR"
+                        android:textAlignment="center"
+                        android:textSize="10sp"
+                        android:visibility="visible"
+                        app:layout_constraintBottom_toTopOf="@+id/seekBar_period"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/button_period" />
 
-                            <Button
-                                android:id="@+id/button_period"
-                                style="@style/Widget.AppCompat.Button.Borderless"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="8dp"
-                                android:layout_marginTop="8dp"
-                                android:text="Period: N"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                </android.support.constraint.ConstraintLayout>
 
-                            <SeekBar
-                                android:id="@+id/seekBar_period"
-                                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
-                                android:layout_marginBottom="8dp"
-                                android:layout_marginTop="9dp"
-                                android:max="10"
-                                android:padding="20dp"
-                                android:paddingLeft="16dp"
-                                android:paddingRight="16dp"
-                                android:progress="3"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/period_indicator" />
-
-                            <TextView
-                                android:id="@+id/period_indicator"
-                                android:layout_width="match_parent"
-                                android:layout_height="33dp"
-                                android:layout_marginBottom="8dp"
-                                android:layout_marginTop="8dp"
-                                android:padding="20dp"
-                                android:visibility="visible"
-                                app:layout_constraintBottom_toTopOf="@+id/seekBar_period"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/button_period" />
-
-                        </android.support.constraint.ConstraintLayout>
-
-                    </LinearLayout>
-
-                </FrameLayout>
             </android.support.v7.widget.CardView>
 
             <TextView
@@ -173,23 +168,33 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/analysis_IC_card_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/cipherICTextView"
+                <LinearLayout
+                    android:id="@+id/IC_view_linear_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_weight="1"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:paddingTop="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/cipherICFreqView" />
+                    android:layout_height="match_parent"
+                    android:layout_margin="7dp"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button_period"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginEnd="122dp"
+                        android:layout_marginStart="122dp"
+                        android:layout_marginTop="16dp"
+                        android:text="Period: N"
+                        android:textColor="#ffffff"
+                        app:layout_constraintBottom_toTopOf="@+id/period_indicator"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_chainStyle="packed" />
+                </LinearLayout>
+
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
