--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_letter.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_letter.xml
@@ -68,15 +68,12 @@
                     android:layout_weight="1">
 
                     <LinearLayout
+                        android:id="@+id/frequency_letter_linear_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="12dp"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/graph_frequency_detailed_text_view"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Graph frequency detail" />
                     </LinearLayout>
                 </ScrollView>
             </LinearLayout>
