--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_period.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_period.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -24,6 +25,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="8dp"
                 android:orientation="vertical">
 
                 <FrameLayout
@@ -75,7 +77,8 @@
 
                     <Button
                         android:id="@+id/period_button"
-                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:textColor="#ffffff"
                         android:layout_width="144dp"
                         android:layout_height="47dp"
                         android:layout_marginBottom="16dp"
@@ -105,25 +108,41 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/frequency_period_sign"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="109dp"
+                    android:layout_marginEnd="103dp"
+                    android:layout_marginStart="103dp"
+                    android:layout_marginTop="110dp"
+                    android:text="Please slide the seek bar"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </android.support.constraint.ConstraintLayout>
+
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
                 <LinearLayout
+                    android:id="@+id/frequency_period_linear_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/graph_period_detail"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Please set Maximum period" />
                 </LinearLayout>
             </ScrollView>
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
