--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_general_text_input.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_general_text_input.xml
@@ -32,6 +32,7 @@
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:text="Button"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/general_input" />
 
@@ -43,6 +44,7 @@
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:text="Button"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/general_input" />
     </LinearLayout>
