--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_analysis.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_analysis.xml
@@ -7,7 +7,7 @@
     android:layout_marginBottom="10dp"
     android:animateLayoutChanges="true"
 
-    android:gravity="center_vertical|center_horizontal"
+    android:gravity="center"
     android:orientation="vertical">
 
     <ScrollView
@@ -19,8 +19,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical|center_horizontal"
-            android:animateLayoutChanges="true"
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
@@ -52,9 +50,9 @@
                         android:text="[KEY]"
                         android:textAlignment="center" />
 
-                    <android.support.constraint.ConstraintLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="65dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:orientation="horizontal">
 
@@ -63,36 +61,17 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:layout_marginEnd="66dp"
-                            android:layout_marginStart="56dp"
-                            android:layout_marginTop="8dp"
                             android:layout_weight="1"
-                            android:text="Shift Left"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toStartOf="@+id/button_analysis_shift_right"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
+                            android:text="Shift Left" />
 
                         <Button
                             android:id="@+id/button_analysis_shift_right"
                             style="@style/Widget.AppCompat.Button.Borderless.Colored"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:layout_marginEnd="56dp"
-                            android:layout_marginStart="66dp"
-                            android:layout_marginTop="8dp"
                             android:layout_weight="1"
-                            android:text="Shift right"
-                            android:textSize="14sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/button_analysis_shift_left"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
-                    </android.support.constraint.ConstraintLayout>
+                            android:text="Shift right" />
+                    </LinearLayout>
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -109,52 +88,78 @@
                 android:id="@+id/analysis_period_card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardUseCompatPadding="true">
+                android:layout_weight="1">
 
-                <android.support.constraint.ConstraintLayout
+                <FrameLayout
+                    android:id="@+id/layout_period"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:layout_editor_absoluteY="175dp">
 
-                    <SeekBar
-                        android:id="@+id/seekBar_period"
-                        style="@style/Widget.AppCompat.SeekBar.Discrete"
-                        android:layout_width="281dp"
-                        android:layout_height="63dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginEnd="26dp"
-                        android:layout_marginStart="26dp"
-                        android:layout_marginTop="9dp"
-                        android:max="10"
-                        android:padding="20dp"
-                        android:paddingLeft="16dp"
-                        android:paddingRight="16dp"
-                        android:progress="3"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/period_indicator" />
+                    <LinearLayout
+                        android:layout_width="368dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        tools:layout_editor_absoluteX="8dp"
+                        tools:layout_editor_absoluteY="8dp">
 
-                    <TextView
-                        android:id="@+id/period_indicator"
-                        android:layout_width="261dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginEnd="36dp"
-                        android:layout_marginStart="36dp"
-                        android:layout_marginTop="8dp"
-                        android:padding="20dp"
-                        android:text="INDICATOR"
-                        android:textAlignment="center"
-                        android:textSize="10sp"
-                        android:visibility="visible"
-                        app:layout_constraintBottom_toTopOf="@+id/seekBar_period"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/button_period" />
+                        <android.support.constraint.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-                </android.support.constraint.ConstraintLayout>
+                            <Button
+                                android:id="@+id/button_period"
+                                style="@style/Widget.AppCompat.Button.Borderless"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="8dp"
+                                android:text="Period: N"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
+                            <SeekBar
+                                android:id="@+id/seekBar_period"
+                                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginBottom="8dp"
+                                android:layout_marginTop="9dp"
+                                android:max="10"
+                                android:padding="20dp"
+                                android:paddingLeft="16dp"
+                                android:paddingRight="16dp"
+                                android:progress="3"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/period_indicator" />
+
+                            <TextView
+                                android:id="@+id/period_indicator"
+                                android:layout_width="match_parent"
+                                android:layout_height="33dp"
+                                android:layout_marginBottom="8dp"
+                                android:layout_marginTop="8dp"
+                                android:padding="20dp"
+                                android:visibility="visible"
+                                app:layout_constraintBottom_toTopOf="@+id/seekBar_period"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/button_period" />
+
+                        </android.support.constraint.ConstraintLayout>
+
+                    </LinearLayout>
+
+                </FrameLayout>
             </android.support.v7.widget.CardView>
 
             <TextView
@@ -168,33 +173,23 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/analysis_IC_card_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
-                <LinearLayout
-                    android:id="@+id/IC_view_linear_layout"
+                <TextView
+                    android:id="@+id/cipherICTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="7dp"
-                    android:orientation="vertical">
-
-                    <Button
-                        android:id="@+id/button_period"
-                        style="@style/Widget.AppCompat.Button.Colored"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginEnd="122dp"
-                        android:layout_marginStart="122dp"
-                        android:layout_marginTop="16dp"
-                        android:text="Period: N"
-                        android:textColor="#ffffff"
-                        app:layout_constraintBottom_toTopOf="@+id/period_indicator"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_chainStyle="packed" />
-                </LinearLayout>
-
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:paddingTop="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/cipherICFreqView" />
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
