--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_letter.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_letter.xml
@@ -9,76 +9,78 @@
 
     android:animateLayoutChanges="true">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_weight="1">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/frequency_letter_upper_card_view"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <FrameLayout
-                android:id="@+id/graph_freq_layout"
+            <android.support.v7.widget.CardView
+                android:id="@+id/frequency_letter_upper_card_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="206dp"
                 android:layout_weight="1">
 
-                <com.jjoe64.graphview.GraphView
-                    android:id="@+id/graph_freq_lot"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    tools:layout_editor_absoluteX="8dp"
-                    tools:layout_editor_absoluteY="85dp" />
-            </FrameLayout>
-        </android.support.v7.widget.CardView>
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="298dp"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:visibility="invisible" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/frequency_letter_lower_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <Spinner
-                    android:id="@+id/graph_frequency_spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="63dp"
-                    android:layout_weight="1" />
-
-                <ScrollView
+                <FrameLayout
+                    android:id="@+id/graph_freq_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
+
+                    <com.jjoe64.graphview.GraphView
+                        android:id="@+id/graph_freq_lot"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        tools:layout_editor_absoluteX="8dp"
+                        tools:layout_editor_absoluteY="85dp" />
+                </FrameLayout>
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:visibility="invisible" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/frequency_letter_lower_card_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <Spinner
+                        android:id="@+id/graph_frequency_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="63dp"
+                        android:layout_weight="1" />
 
                     <LinearLayout
                         android:id="@+id/frequency_letter_linear_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="12dp"
+                        android:layout_weight="1"
                         android:orientation="vertical">
 
                     </LinearLayout>
-                </ScrollView>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
 
-    </LinearLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
