--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -42,6 +42,7 @@
 
                         <TextView
                             android:id="@+id/project_view_cipher_text"
+                            android:textIsSelectable="true"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
 
@@ -78,8 +79,8 @@
                     android:layout_height="wrap_content" />
 
                 <include
-                    android:id="@+id/sliding_up_panel_content_permutation_include"
-                    layout="@layout/project_view_sliding_up_panel_permutation"
+                    android:id="@+id/sliding_up_panel_content_block_edit_include"
+                    layout="@layout/project_view_sliding_up_panel_block_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </ViewFlipper>
