--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
@@ -11,12 +11,10 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card"
-        android:layout_width="357dp"
+        android:layout_width="wrap_content"
         android:layout_height="198dp"
 
         android:layout_marginBottom="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
 
         android:background="@drawable/myrect"
@@ -59,6 +57,7 @@
                         android:layout_marginTop="16dp"
                         android:text="PREVIEW"
                         android:textColor="@color/cardview_dark_background"
+                        android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -70,18 +69,18 @@
             <LinearLayout
                 android:id="@+id/card_bottom_layout"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/card_title"
-                    android:layout_width="577dp"
-                    android:layout_height="75dp"
+                    android:layout_width="533dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="16dp"
                     android:text="TITLE"
                     android:textAppearance="@android:style/TextAppearance.Material.Large"
-                    android:textSize="18sp" />
+                    android:textSize="14sp" />
 
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/card_button"
@@ -96,7 +95,7 @@
                         android:layout_height="0dp"
                         android:layout_marginBottom="16dp"
                         android:layout_marginEnd="22dp"
-                        android:layout_marginStart="22dp"
+                        android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_weight="1"
                         android:background="@mipmap/ic_more_vert_black_24dp"
