--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_sliding_up_panel_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/project_view_sliding_up_panel_main.xml
@@ -20,48 +20,53 @@
 
     <Button
         android:id="@+id/button_undo"
-        style="@style/Widget.AppCompat.Button.Borderless"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="108dp"
         android:layout_height="54dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginStart="126dp"
         android:layout_marginTop="8dp"
         android:text="Undo"
         android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_permutation"
-        app:layout_constraintTop_toBottomOf="@+id/frequency_graph_period" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_block_edit" />
 
     <Button
-        android:id="@+id/button_permutation"
+        android:id="@+id/button_block_edit"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="108dp"
         android:layout_height="54dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Permutation"
+        android:text="Block Edit"
         android:textSize="10sp"
-        app:layout_constraintEnd_toStartOf="@+id/button_undo"
+        app:layout_constraintBottom_toTopOf="@+id/button_undo"
+        app:layout_constraintEnd_toStartOf="@+id/button_permutation"
         app:layout_constraintStart_toEndOf="@+id/button_crypto_tools"
-        app:layout_constraintTop_toBottomOf="@+id/button_permutation_back" />
+        app:layout_constraintTop_toBottomOf="@+id/frequency_graph_letter" />
 
     <Button
         android:id="@+id/button_crypto_tools"
         style="@style/Widget.AppCompat.Button.Colored"
 
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
-
         android:layout_width="108dp"
         android:layout_height="54dp"
+
+        android:layout_marginBottom="62dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
         android:text="Ciphers"
         android:textColor="#ffffff"
         android:textSize="10sp"
-        app:layout_constraintEnd_toStartOf="@+id/button_permutation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_block_edit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_graphPopup" />
 
@@ -77,13 +82,13 @@
         android:backgroundTint="@android:color/background_light"
         android:text="Frequency Analysis"
         android:textSize="10sp"
-        app:layout_constraintEnd_toStartOf="@+id/button_permutation_back"
+        app:layout_constraintEnd_toStartOf="@+id/permutation_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <Button
-        android:id="@+id/button_permutation_back"
+        android:id="@+id/frequency_graph_letter"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="108dp"
         android:layout_height="54dp"
@@ -107,7 +112,23 @@
         android:text="Frequency Graph (Period)"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_permutation_back"
+        app:layout_constraintStart_toEndOf="@+id/permutation_back"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_permutation"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="108dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="62dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Permutation"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_block_edit"
+        app:layout_constraintTop_toBottomOf="@+id/frequency_graph_period" />
 
 </android.support.constraint.ConstraintLayout>
