--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_period.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_period.xml
@@ -50,12 +50,13 @@
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:animateLayoutChanges="true"
                         android:layout_weight="1">
 
                         <SeekBar
                             android:id="@+id/period_seekBar"
                             android:layout_width="270dp"
-                            android:layout_height="15dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginBottom="13dp"
                             android:layout_marginEnd="57dp"
                             android:layout_marginStart="57dp"
