--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/detail_list_view.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/detail_list_view.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="15dp">
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/detail_list_card_view"
@@ -22,8 +21,7 @@
             <TextView
                 android:id="@+id/detail_name"
 
-                android:background="@color/colorAccent"
-                android:textColor="#ffffff"
+                android:elevation="8dp"
 
                 android:layout_width="259dp"
                 android:layout_height="43dp"
