--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
@@ -7,12 +7,12 @@
     android:animateLayoutChanges="true"
     android:hardwareAccelerated="true"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="4dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card"
         android:layout_width="wrap_content"
-        android:layout_height="198dp"
+        android:layout_height="200dp"
 
         android:layout_marginBottom="4dp"
         android:layout_marginTop="4dp"
@@ -30,7 +30,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:id="@+id/card_top_half"
@@ -57,7 +58,7 @@
                         android:layout_marginTop="16dp"
                         android:text="PREVIEW"
                         android:textColor="@color/cardview_dark_background"
-                        android:textSize="12sp"
+                        android:textSize="10sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -74,13 +75,14 @@
 
                 <TextView
                     android:id="@+id/card_title"
-                    android:layout_width="533dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="578dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:padding="16dp"
                     android:text="TITLE"
                     android:textAppearance="@android:style/TextAppearance.Material.Large"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
 
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/card_button"
@@ -94,7 +96,7 @@
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:layout_marginBottom="16dp"
-                        android:layout_marginEnd="22dp"
+                        android:layout_marginEnd="24dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_weight="1"
